cambio final final final

--- a/principal.html
+++ b/principal.html
@@ -8,26 +8,22 @@
 <body>
   <header>
     <h1>XPLØR: Mission Panama</h1>
-    <img src="img/alcaldia.png" alt="Alcaldía" class="PTY">
-    <span class="i-pty-text">I⭐PTY</span>
+    <img src="img/xlogo.png" alt="xlogo" class="PTY">
     <img src="img/logos.png" alt="Logo XPLØR" class="logo">
   
     <p>Play, Explore, Learn and Earn.</p>
   </header>
   
 
-  <main>
-    <img src="img/portada.png" alt="Imagen Central" class="main-image">
-  </main>
-
   <section class="button-section">
     <a href="adventure.html" class="button">
       <img src="" alt=""> Start Adventure
     </a>
   
-    <a href="scan.html" class="button">
-      <img src="" alt=""> Scan QR
+    <a href="https://xplor-qr.streamlit.app" class="button" target="_blank">
+  <img src="" alt=""> Scan QR
     </a>
+
   
     <a href="passport.html" class="button">
       <img src="" alt=""> My Passport
@@ -39,10 +35,14 @@
     </a>
   </section>
   
-
+  <main>
+    <img src="img/portada.png" alt="Imagen Central" class="main-image">
+  </main>
+  
   <footer>
     <p>© 2025 XPLØR - PTY </p>
 
   </footer>
 </body>
 </html>
+
