--- a/index.html
+++ b/index.html
@@ -1,29 +1,52 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XPLØR: Mission Panama</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="principal.css">
 </head>
 <body>
+  <header>
+    <h1>XPLØR: Mission Panama</h1>
+    <img src="img/xlogo.png" alt="xlogo" class="PTY">
+    <img src="img/logos.png" alt="Logo XPLØR" class="logo">
   
-  <div class="container">
-    <img src="img/logo.png" alt="XPLØR Logo" class="logo">
+    <p>Play, Explore, Learn and Earn.</p>
+  </header>
+  
 
-    <div class="left">
-      <h1>Welcome to XPLØR: Mission Panama</h1>
-      <p>Play, Explore, Learn and Earn.</p>
+  <section class="button-section">
+    <a href="team.html" class="button">
+      <img src="" alt=""> Team
+    </a>
 
-      <a class="button" href="login.html">Start Adventure</a>
-      <a class="button" href="signup.html">Create Free Account</a>
 
-      <div class="social-links">
-        <a href="">Contact Us</a> | <a href="">Privacy Policy</a>
-      </div>
-    </div>
+    <a href="adventure.html" class="button">
+      <img src="" alt=""> Start Adventure
+    </a>
+  
+    <a href="https://xplor-qr.streamlit.app" class="button" target="_blank">
+  <img src="" alt=""> Scan QR
+    </a>
 
-    <div class="right"></div>
-  </div>
+  
+    <a href="coming.html" class="button">
+      <img src="" alt=""> My Passport
+    </a>
+  
+    <a href="principal.html" class="button">
+      <img src="" alt=""> Register   
+    </a>
+  </section>
+  
+  <main>
+    <img src="img/portada.png" alt="Imagen Central" class="main-image">
+  </main>
+  
+  <footer>
+    <p>© 2025 XPLØR - PTY </p>
+
+  </footer>
 </body>
 </html>
+
