--- a/principal.html
+++ b/principal.html
@@ -1,48 +1,29 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>XPLØR: Mission Panama</title>
-  <link rel="stylesheet" href="principal.css">
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <header>
-    <h1>XPLØR: Mission Panama</h1>
-    <img src="img/xlogo.png" alt="xlogo" class="PTY">
-    <img src="img/logos.png" alt="Logo XPLØR" class="logo">
   
-    <p>Play, Explore, Learn and Earn.</p>
-  </header>
-  
+  <div class="container">
+    <img src="img/logo.png" alt="XPLØR Logo" class="logo">
 
-  <section class="button-section">
-    <a href="adventure.html" class="button">
-      <img src="" alt=""> Start Adventure
-    </a>
-  
-    <a href="https://xplor-qr.streamlit.app" class="button" target="_blank">
-  <img src="" alt=""> Scan QR
-    </a>
+    <div class="left">
+      <h1>Welcome to XPLØR: Mission Panama</h1>
+      <p>Play, Explore, Learn and Earn.</p>
 
-  
-    <a href="passport.html" class="button">
-      <img src="" alt=""> My Passport
-    </a>
-  
-    <a href="missions.html" class="button">
-      <img src="" alt=""> See Available Adventures
-      
-    </a>
-  </section>
-  
-  <main>
-    <img src="img/portada.png" alt="Imagen Central" class="main-image">
-  </main>
-  
-  <footer>
-    <p>© 2025 XPLØR - PTY </p>
+      <a class="button" href="login.html">Start Adventure</a>
+      <a class="button" href="signup.html">Create Free Account</a>
 
-  </footer>
+      <div class="social-links">
+        <a href="">Contact Us</a> | <a href="">Privacy Policy</a>
+      </div>
+    </div>
+
+    <div class="right"></div>
+  </div>
 </body>
 </html>
-
