--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header>
     <h1>XPLØR: Mission Panama</h1>
     <img src="img/xlogo.png" alt="xlogo" class="PTY">
-    <img src="img/logos.png" alt="Logo XPLØR" class="logo">
+    <img src="img/logo.png" alt="Logo XPLØR" class="logo">
   
     <p>Play, Explore, Learn and Earn.</p>
   </header>
