--- a/principal.html
+++ b/principal.html
@@ -7,7 +7,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  
+
+<style>
+  img.logo {
+    width: 150px;
+    height: auto;
+    margin-bottom: 20px;
+  }
+
+</style>
+
   <div class="container">
     <img src="img/logo.png" alt="XPLØR Logo" class="logo">
 
